adding git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,10 @@ hs_err_pid*
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+*.iml
+out/
+.idea/*
+.idea
 # Generated files
 .idea/**/contentModel.xml
 
